--- a/RC-Unity/Packages/manifest.json
+++ b/RC-Unity/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.benkuper.oscquery": "file:D:/Documents/Perso/Projects/Unity-OSCQuery",
+    "com.domybest.mybox": "https://github.com/Deadcows/MyBox.git",
     "com.endel.nativewebsocket": "https://github.com/endel/NativeWebSocket.git#upm",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.feature.development": "1.0.1",
@@ -12,6 +14,7 @@
     "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
+    "jp.keijiro.klak.spout": "file:../jp.keijiro.klak.spout",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -43,5 +46,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "Ben Kuper",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.benkuper"
+      ]
+    }
+  ]
 }
